# overspending-fit-calou

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.vps.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  test_config_settings.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_import_status_and_counts.py  0003_import_file_path.py  0004_ledger_v2.py  0005_splits_category_nullable.py  0006_category_metadata_and_native_seed.py  0007_rules_engine_lineage.py  0008_refund_category_backfill.py  0009_transaction_manual_events.py  0010_counterparty_merge_phase_d.py  0011_fix_counterparties_id_sequence.py  0011_moments_v2_schema.py  0012_merge_0011_heads.py  0013_category_normalized_name_unique.py  0014_category_sort_order.py  0015_analytics_query_indexes.py  0016_moment_cover_image.py  0017_user_profile.py
backend/app/: config.py  main.py  wait_for_db.py
backend/app/data/: category_catalog.json
backend/scripts/: bootstrap_finary_rules.py  seed_demo.py
backend/tests/: conftest.py  test_analytics.py  test_analytics_moments_harness.py  test_categories.py  test_import_normalization.py  test_import_row_links.py  test_import_service.py  test_ledger_v2.py  test_moment_candidates.py  test_moment_candidates_harness.py  test_moments.py  test_moments_harness.py  test_moments_v2_schema_migration.py  test_refund_backfill_migration.py  test_rules_engine.py  test_split_invariant.py
(+163 files in other folders)
