[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-expense-backend"
version = "0.1.0"
description = "FastAPI backend for personal expense tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "pydantic-settings>=2.2",
  "psycopg[binary]>=3.1",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["data/*.json"]
